--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -9,7 +9,7 @@ small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
+table, caption, tbody, tfoot, thead, tr, th, td, menu, aside {
 	margin: 0;
 	padding: 0;
 	border: 0;
