--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,14 +1,15 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
-  "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <title>Application name</title>
+    <title>Ben Schwarz</title>
     <link rel="stylesheet" href="/css/reset.css" type="text/css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="/css/base.css" type="text/css" media="screen" charset="utf-8">
+    <link rel="openid.server" href="http://www.myopenid.com/server">
+    <link rel="openid.delegate" href="http://benschwarz.myopenid.com/">
   </head>
-  <body>
-    <div id="container">
+  <body id="home">
+    <div id="wrapper">
       <%= yield %>
     </div>
   </body>
