--- a/views/index.erb
+++ b/views/index.erb
@@ -31,8 +31,10 @@
     <header>
       <h2><a href="#">Panic Software’s Directors Room</a></h2>
       <span class="attribution">source <a href="#">Tim Lucas</a> from <a href="#">toolmantim</a></span>
-      <img src="http://17.media.tumblr.com/l6xSmhBkDjv062m5WDDdeyslo1_400.jpg">
     </header>
+    <figure>
+      <img src="http://17.media.tumblr.com/l6xSmhBkDjv062m5WDDdeyslo1_400.jpg">
+    </figure>
     <aside class="posted">
       <h3>Posted</h3>
       <time datetime="2008-02-14">Wednesday, 12<span class="fakecaps">th</span> of  August, 2007</time>
