--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,6 +11,9 @@
   <body id="home">
     <div id="wrapper">
       <%= yield %>
+      <footer>
+        <p>All content herein by Ben Schwarz unless otherwise noted. Licence: Creative Commons, by <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">nc-sa</a></p>
+      </footer>
     </div>
   </body>
 </html>
