Added a real not found / 404 page and some styles to boot

--- a/views/not_found.erb
+++ b/views/not_found.erb
@@ -1,2 +1,6 @@
-<h1>Oh noes!</h1>
-<p>Can't haz page</p>
+<header>
+  <h1>Oh no!</h1>
+</header>
+
+<p>The page that you're looking for no longer exists.</p>
+<p>Why don't you <a href="/" rel="index">start over?</a></p>
