--- a/public/css/base.css
+++ b/public/css/base.css
@@ -5,7 +5,7 @@ body#home { background: 0 140px no-repeat url(data:image/png;base64,iVBORw0KGgoA
 h1 { font-size: 2.5em; font-weight: normal; }
 h1 a { color: black; text-decoration: none; }
 menu { font-size: 1.1em; color: #666; }
-menu a { color: #00A0C6; }
+menu a, p a { color: #00A0C6; }
 
 section { display: block; margin-top: 125px;}
 
