--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <header>
   <h1><a href="/" rel="index">Ben Schwarz</a></h1>
-  <menu><a href="/writings" title="Articles that Ben Schwarz has written">Writings</a>, <a href="#" title="Ben Schwarz on Twitter">thoughts</a> and <a href="http://github.com/benschwarz" title="Ben Schwarz's open source projects">code</a></menu>
+  <nav><a href="/writings" title="Articles that Ben Schwarz has written">Writings</a>, <a href="#" title="Ben Schwarz on Twitter">thoughts</a> and <a href="http://github.com/benschwarz" title="Ben Schwarz's open source projects">code</a></nav>
 </header>
 
 <section id="content">
