--- a/public/css/base.css
+++ b/public/css/base.css
@@ -4,8 +4,8 @@ body#home { background: 0 140px no-repeat url(data:image/png;base64,iVBORw0KGgoA
 
 h1 { font-size: 2.5em; font-weight: normal; }
 h1 a { color: black; text-decoration: none; }
-menu { font-size: 1.1em; color: #666; }
-menu a { color: #00A0C6; }
+nav { font-size: 1.1em; color: #666; }
+nav a { color: #00A0C6; }
 
 section { display: block; margin-top: 125px;}
 
@@ -15,10 +15,14 @@ article .description { width: 600px; font-family: Helvetica; margin-top: 1em; }
 article header { width: 615px; display: block; }
 article header h2 { display: inline; font-size: 1.9em; font-weight: normal; font-style: italic; }
 article header h2 a { color: black; }
+article header blockquote { text-indent: -1em; }
+
+article.single header h1 { display: inline; font-style: italic; }
+article.single header blockquote span { color: #999; }
 
 article.media header { width: 760px; }
 
-.attribution { margin-left: 2em; color: #8C8C8C; font-size: 0.8em; font-family: Helvetica; font-style: italic; }
+.attribution { margin-left: 1.5em; color: #8C8C8C; font-size: 0.8em; font-family: Helvetica; font-style: italic; }
 .attribution a { color: #00A0C6; }
 
 #home article aside { position: absolute; right: 0; top: -0.7em; width: 125px; }
@@ -27,7 +31,7 @@ article.media header { width: 760px; }
 #home article.media figure { margin-top: 3.7em; display: block; }
 #home article.media aside { right: 160px; top: 5em; }
 
-article aside time { line-height: 1.5em; font-size: 1.2em; color: #3F3F3F; }
+article aside time { line-height: 1.5em; font-size: 1em; color: #3F3F3F; }
 
 .fakecaps { font-size: 50%; text-transform: uppercase; font-variant: small-caps; vertical-align: text-top; }
 
