--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,17 +4,58 @@
     %title Ben Schwarz
     %link{:rel => "stylesheet", :href => "/css/reset.css", :type => "text/css", :media => "screen"}
     %link{:rel => "stylesheet", :href => "/css/base.css", :type => "text/css", :media => "screen"}
-    %link{:rel => "stylesheet", :href => "/css/code-highlighter.css", :type => "text/css", :media => "screen"}
     %link{:rel => "openid.server", :href => "http://www.myopenid.com/server"}
     %link{:rel => "openid.delegate", :href => "http://benschwarz.myopenid.com/"}
   %body{:id => @page_id}
     #wrapper
       = yield
-      %footer
-        %p 
-          All content herein by Ben Schwarz unless otherwise noted. Licence: Creative Commons, by
-          %a{:href => "http://creativecommons.org/licenses/by-nc-sa/3.0/"} nc-sa
-    %script{:src => "/js/code-highlighter/code-highlighter.js", :type => "text/javascript"}
-    %script{:src => "/js/code-highlighter/ruby.js", :type => "text/javascript"}
-    %script{:src => "/js/code-highlighter/js.js", :type => "text/javascript"}
-    %script{:src => "/js/code-highlighter/html.js", :type => "text/javascript"}
+    %footer
+      #padding
+        %section
+          #about.vcard
+            %h4 About the author
+            %img{:src => "http://s3.amazonaws.com/twitter_production/profile_images/280124623/Photo-69_normal.png"}
+            %p
+              %span.fn Ben Schwarz
+              is web architect hailing from
+              %span.locality Melbourne
+              who has a strong focus on user experience and scalable content delivery.
+              %br
+              These interests overflow into his programming and development work that he has conducted over the past 9 years.
+              %span.source
+                contact via 
+                %a{:href => "#"} email
+          #events.vevent
+            %h4 Upcoming events
+            %p
+              %a{:href => @event[:ticket_url], :class => "url summary"} 
+                = "#{@event[:name]} - #{@event[:venue_city]}, #{@event[:venue_country_name]}"
+              %span.description
+                = @event[:description]
+              %span.source
+                from
+                %a{:href => "#"} upcoming
+          
+          #elsewhere
+            %h4 Elsewhere
+            %ul
+              %li
+                %a{:href => "#"} Twitter
+              %li
+                %a{:href => "#"} Github
+              %li
+                %a{:href => "#"} Flickr
+              %li
+                %a{:href => "#"} Slideshare
+              %li
+                %a{:href => "#"} Delicious
+              %li
+                %a{:href => "#"} Upcoming
+              %li
+                %a{:href => "#"} Last.fm
+
+          #cc
+            %h4 Creative commons licence
+            %p 
+              All content herein by Ben Schwarz unless otherwise noted. Licence: Creative Commons, by
+              %a{:href => "http://creativecommons.org/licenses/by-nc-sa/3.0/", :rel => "license"} nc-sa
