--- a/views/layout.haml
+++ b/views/layout.haml
@@ -6,7 +6,13 @@
     %link{:rel => "stylesheet", :href => "/css/base.css", :type => "text/css", :media => "screen"}
     %link{:rel => "openid.server", :href => "http://www.myopenid.com/server"}
     %link{:rel => "openid.delegate", :href => "http://benschwarz.myopenid.com/"}
-    %meta{"http-equiv" => 'Content-Type', :content => 'text/html; charset=utf-8' }
+    %meta{"http-equiv" => 'Content-Type', :content => 'text/html; charset=utf-8'}
+    %meta{:name => "description", :content => "A Melbourne based developer with an uncanny fetish for user experience and technology"}
+    %meta{:name => "keywords", :content => "#{content}"}
+    %meta{:name => "author", :content => "Ben Schwarz"}
+    %meta{:name => "robots", :content => "index, follow"}
+    
+    
   %body{:id => @page_id}
     #wrapper
       = yield
