Updated dependencies. Temporarily hidden articles. Added a live flickr image.

--- a/views/_about.haml
+++ b/views/_about.haml
@@ -10,4 +10,4 @@
     These interests overflow into his programming and development work that he has conducted over the past 9 years.
     %span.source
       contact via 
-      %a{:href => "#"} email
+      %a{:href => entity_encode("mailto:ben.schwarz@gmail.com")} email
