--- a/views/layout.haml
+++ b/views/layout.haml
@@ -8,7 +8,7 @@
     %link{:rel => "openid.delegate", :href => "http://benschwarz.myopenid.com/"}
     %meta{"http-equiv" => 'Content-Type', :content => 'text/html; charset=utf-8'}
     %meta{:name => "description", :content => "A Melbourne based developer with an uncanny fetish for user experience and technology"}
-    %meta{:name => "keywords", :content => "#{content}"}
+    %meta{:name => "keywords", :content => "ruby, developer, ui, ux, user experience, application development, testing, test driven, development, melbourne, australia, ben, ben schwarz, benschwarz, bschwarz"}
     %meta{:name => "author", :content => "Ben Schwarz"}
     %meta{:name => "robots", :content => "index, follow"}
     
