Corrected last.fm link

--- a/views/_elsewhere.haml
+++ b/views/_elsewhere.haml
@@ -14,4 +14,4 @@
     %li
       %a{:href => "http://upcoming.yahoo.com/user/908522/"} Upcoming
     %li
-      %a{:href => "http://last.fm/users/benschwarz"} Last.fm
+      %a{:href => "http://last.fm/user/benschwarz"} Last.fm
