Titled the article

--- a/articles/growing-up-with-a-new-site.haml
+++ b/articles/growing-up-with-a-new-site.haml
@@ -1,4 +1,4 @@
--# title: A new site
+-# title: Growing up with a new site
 -# published: 2009-07-31
 
 :markdown
@@ -11,7 +11,7 @@
   Its not hard to say that leaving my salary paying job and moving to consulting was one of the best things I've done. It felt selfish to leave the team for a reason none other than "I needed time away". That was a year ago. Since then I've had more time to reflect on life and importantly, development.
   
   ### Juicy details
-  You might notice that the new site has a bunch of links to various web services. I'm pulling my "about the author" image from twitter, "upcoming events" from upcoming, projects from github, presentations from slideshare, links from delicious and images from flickr - all using [Smoke](http://github.com/benschwarz/smoke), not only that, but I do so using only about 45 lines of source code. 
+  You might notice that the new site has a bunch of links to various web services. I'm pulling my "about the author" image from twitter, "upcoming events" from upcoming, projects from github, presentations from slideshare, links from delicious and images from flickr - all using [Smoke](http://github.com/benschwarz/smoke), not only that, but I do so using only [about 45 lines of source code](http://github.com/benschwarz/benschwarz-site/blob/6dd0fd6523e350be24b90d010e4d1f6f82cad60e/lib/stream.rb). 
   
   #### Smoke
   Inspired by Yahoo's "Pipes" but frustrated with the strange act of dragging elements around the screen and knowing what I wanted to but finding that I could probably write a custom parser _faster_. A vast majority of the research or 'learning' projects that I've put together consume web services, now I can pull services together, mash them up, cut them to pieces and re-interpret the web the way I feel it should be.
