Added ordinalize method for date rd's, th's etc. Changes for updated smoke version. Extended article. Starting to work on the article layout

--- a/articles/growing-up-with-a-new-site.haml
+++ b/articles/growing-up-with-a-new-site.haml
@@ -26,5 +26,11 @@
   #### Comments
   For now, I'm going to run without comments, if you've got something to stay ensure that you drop me a line, I'd love to hear about it.
   
+  #### Markup
+  I'm using HTML5, so if you're in IE, well, you've probably given up by now. I don't care. My personal web site is as much of personal development as it is my representation, I still don't care. I get to use new elements and its fantastic. When I work on your jobs (hire me!) I won't be such a renegade. Promise
+  
+  #### Design
+  I'm responsible for the design of the site, [Anthony](http://aestheticallyloyal.com) gave me moral support, slapped some layout tips and rules on me when I asked for them. I think he found it really hard to watch me go through the process of putting the site together. Generally, when [we](http://ab-c.com.au) [work together](http://ffolio.net) he is the design part of our [voltron](http://images.google.com.au/images?q=voltron&oe=utf-8&rls=org.mozilla:en-US:official&client=firefox-a&um=1&ie=UTF-8&ei=iNRySvjDGoPuswOg8NzQCA&sa=X&oi=image_result_group&ct=title&resnum=4) machine. 
+  
   ### In closing
   A web site is never "done", I hope to evolve this site and keep it as fresh as I can for as long as I can (using technology, of course). Perhaps I'll end up writing better... God, I failed english in high school because I preferred to skip it to eat chinese and play pool with my friends. 
