--- a/views/index.haml
+++ b/views/index.haml
@@ -7,7 +7,7 @@
   #recently
     %h2 Recently
     %ul
-      / partial "articles", :articles => @articles
+      = partial "articles", :articles => @articles
       = partial "images", :images => @images
   
   = partial "links", :links => @links
