Added articles.atom feed

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -6,6 +6,7 @@
     %link{:rel => "stylesheet", :href => "/css/base.css", :type => "text/css", :media => "screen"}
     %link{:rel => "openid.server", :href => "http://www.myopenid.com/server"}
     %link{:rel => "openid.delegate", :href => "http://benschwarz.myopenid.com/"}
+    %link{:rel => "alternate", :title => "German for black RSS", :href => "http://feeds.feedburner.com/schwarz", :type => "application/atom+xml"}    
     %meta{"http-equiv" => 'Content-Type', :content => 'text/html; charset=utf-8'}
     %meta{:name => "description", :content => "A Melbourne based developer with an uncanny fetish for user experience and technology"}
     %meta{:name => "keywords", :content => "ruby, developer, ui, ux, user experience, application development, testing, test driven, development, melbourne, australia, ben, ben schwarz, benschwarz, bschwarz"}
