Styling up two levels of headers

--- a/views/_about.haml
+++ b/views/_about.haml
@@ -1,6 +1,6 @@
 #about.vcard
   %h4 About the author
-  %img{:src => about[:profile_image_url]}
+  %img{:src => ''}
   %p
     %span.fn Ben Schwarz
     is web architect hailing from
