--- a/public/css/base.css
+++ b/public/css/base.css
@@ -58,3 +58,7 @@ article span.attribution time { color: #999; }
 article section#content { width: 580px; margin-top: 120px; }
 
 article aside { position: absolute; left: 645px; top: 181px; width: 160px; font-size: 0.7em; color: #999; line-height: 1.6em; }
+#wrapper #home { position: absolute; top: 30px; margin-left: 40px; font-size: 0.7em; color: #999; text-decoration: none; font-style: italic; }
+article section#content h3 { margin: 2em 0 0 0; display: block; }
+article section#content h4 { color: #666; font-size: 0.8em; font-style: italic; }
+article section#content p { margin: 0 0 1em 0; }
