--- a/public/css/base.css
+++ b/public/css/base.css
@@ -6,7 +6,7 @@ img { display: block; }
 
 h1 { font-size: 2em; font-weight: normal; font-style: italic; color: #FF3300; line-height: 1.8em; margin-left: 40px; margin-bottom: 65px; }
 h1 a { background-color: #FF3300; text-decoration: underline; color: white; }
-h2 { color: #FF3300; font-size: 1.1em; font-weight: normal; margin-bottom: 30px;}
+h2 { color: #FF3300; font-size: 1.1em; font-weight: normal; margin-bottom: 30px; }
 
 section, footer { display: block; }
 section#content { overflow: hidden; margin: 0 0 40px 40px; line-height: 1.5em; font-size: 0.8em; }
@@ -59,6 +59,7 @@ article section#content { width: 580px; margin-top: 120px; }
 
 article aside { position: absolute; left: 645px; top: 181px; width: 160px; font-size: 0.7em; color: #999; line-height: 1.6em; }
 #wrapper #home { position: absolute; top: 30px; margin-left: 40px; font-size: 0.7em; color: #999; text-decoration: none; font-style: italic; }
-article section#content h3 { margin: 2em 0 0 0; display: block; }
-article section#content h4 { color: #666; font-size: 0.8em; font-style: italic; }
+article section#content h2 { margin: 2em 0 0 0; display: block; }
+article section#content h3 { color: #666; font-size: 0.8em; font-style: italic; }
 article section#content p { margin: 0 0 1em 0; }
+article section#content a { text-transform: uppercase; font-weight: normal; text-decoration: underline; letter-spacing: 0.1em; color: #333; font-size: 0.8em; }
