Tweaked design. Hung quotes on article page and tweaked my articles

--- a/views/_cc.haml
+++ b/views/_cc.haml
@@ -1,5 +1,5 @@
 #cc
-  %h4 Creative commons licence
+  %h4 Creative commons license
   %p 
-    All content herein by Ben Schwarz unless otherwise noted. Licence: Creative Commons, by
+    All content herein by Ben Schwarz unless otherwise noted. License: Creative Commons, by
     %a{:href => "http://creativecommons.org/licenses/by-nc-sa/3.0/", :rel => "license"} nc-sa
