--- a/views/not_found.haml
+++ b/views/not_found.haml
@@ -1,6 +1,8 @@
 %header
   %h1 Oh no!
-%p The page that you're looking for no longer exists.
-%p 
-  Why don't you 
-  %a{:href => "/", :rel => "index"} start over?
+  
+%section#content
+  %h2 The page that you're looking for no longer exists.
+  %p 
+    Why don't you 
+    %a{:href => "/", :rel => "index"} start over?
