--- a/articles/rubykaigi-a-western-perspective.haml
+++ b/articles/rubykaigi-a-western-perspective.haml
@@ -11,30 +11,32 @@
 
   What a contrast from the Melbourne winter! (max 14ºc) Tokyo was 33ºc and around 90% humidity.  If Tokyo wasn’t already disorientating enough with the bright (like daylight) city lights of Shinjuku, the visual noise of the subway maps and the sheer volume of people everywhere.
 
-  During the week of the RubyKaigi, we managed to have dinner and drinks in a michelin star rated restaurant, hang in an awesome japanese metal / rock bar, attempt to go to the fish market (straight from the awesome bar) and scream “ruby ruby ruby” along with the kaiser chiefs most nights (at least once in an ‘all you can drink’ karaoke bar)
+  During the week of the RubyKaigi, we managed to have [dinner and drinks in a michelin star rated restaurant](http://www.flickr.com/photos/benschwarz/sets/72157621527844256/), [hang in an awesome japanese metal / rock bar](http://www.flickr.com/photos/benschwarz/sets/72157621638227795/), attempt to go to the fish market (straight from the awesome bar) and scream “ruby ruby ruby” along with the kaiser chiefs most nights (at least once in an ‘all you can drink’ karaoke bar)
 
   The visual impact of Tokyo streets blew me away. As did the friendliness and acceptance of the japanese people - even with the 5 or 6 japanese words that I poorly executed to get my way around. 
+  ![Pops](http://farm3.static.flickr.com/2639/3732701792_0004d6f87a.jpg "Our chef spoke fantastic english")
 
-  Although I was the invader, I found many japanese locals to know far more english than I did japanese. On my first night in Tokyo, while running late to dinner the manager of a small connivence store walked me from one end of a massive train station to the other, where I needed to be to catch a specific line. He also taught me how to fish, rather than just showing me where it was. I thanked him, he bowed and trundled back to his store.
+  Although I was the invader, I found many japanese locals to know far more english than I did japanese. 
+  
+  On my first night in Tokyo, while running late to dinner the manager of a small connivence store walked me from one end of a massive train station to the other, where I needed to be to catch a specific line. He also taught me how to fish, rather than just showing me where it was. I thanked him, he bowed and trundled back to his store.
 
 
-  Where is this going anyway? 
+  ### Where is this going anyway? 
 
 
   Not really anywhere, it was a long way home from Tokyo and I thought this post during a warm embrace with my headphones and iPhone.
 
-  Come to Railscamp in Melbourne this November
+  ### Come to Railscamp in Melbourne this November
 
   Theres plenty to read about past railscamps, including one in the us only this last gone week. I’m one of the organisers for railscamp 6, situated an hour out of Melbourne.
 
-  Some common excuses
+  ### Some common excuses
 
-  My wife / girlfriend / parter / dog would never accept me leaving them for two weeks.
+  #### My wife / girlfriend / parter / dog would never accept me leaving them for two weeks.
+
+  ![Tolerant girlfriends](http://farm4.static.flickr.com/3431/3732655300_2a60de61cb.jpg "Tolerant girlfriends")
   I brought my girlfriend along. It seems that a couple of weeks in Tokyo is a pretty easy sell (dah)
 
-  Rubykaigi is almost more than 60% japanese content
-
-  Leonard Chin was a superstar, he had live translations on a second monitor in all of the japanese sessions that I attended. Anyway, I skipped more than 60% of the talks at Railsconf this year (currency of talks at these big conferences is a bitch)
-
-
-
+  #### Rubykaigi is almost more than 60% japanese content
+  ![Ruby in Japanese](http://farm4.static.flickr.com/3440/3742724460_ed3329978c.jpg "Ruby")
+  Leonard Chin was a superstar, he had live translations on a second monitor in all of the japanese sessions that I attended. Anyway, I skipped more than 60% of the talks at Railsconf this year (currency of talks at these big conferences is a bitch). Most times conferences are more about going to meet and hang out with other like minded people. RubyKaigi was awesome and it'll be pretty hard to not attend next year. See you there?
