--- a/views/about.haml
+++ b/views/about.haml
@@ -9,7 +9,17 @@
       ## Personal
       ![Me](/images/me.png)
       
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut nisl vitae mauris gravida dapibus. Mauris quis metus diam. Etiam suscipit massa vitae lectus volutpat non convallis massa placerat. Quisque ac lobortis arcu. In et lacus enim, id aliquam diam. Cras accumsan auctor ipsum sed facilisis. Donec eget metus magna. Quisque dictum, lectus porta imperdiet lacinia, ligula ligula porttitor justo, eget facilisis mi lacus sed sem. Sed consectetur fermentum sodales. Sed semper pellentesque quam, et ultricies felis ultrices a.
+      I was born and still live in Melbourne, Australia. However I have aspirations to travel the world and live subsidised entirely via a laptop.  
+      
+      Here in Melbourne I work for myself, the company name is completely uninteresting (Ben Schwarz Pty Ltd), however; I love what I do and constantly strive to improve my process and knowledge. 
+
+      Currently, I manage projects using something _like_ agile and most of development work is conducted using BDD and/or TDD, depending on the flavor of project.
+
+      My language of choice is Ruby, however my skills cross the chasm of various open source technologies and front end development.
+
+      Previously, I've worked in environments where the particular focus has been _"humane design"_, this is something that resonates very well with the minimal approach that I like to bring to my processes - _"Simple, beautiful, user results"_.
+
+      If you have a project in mind please feel free to drop me a line to discuss. If I can't help you chances are I'll know someone who can.
   
   .column.four
     #special-projects
@@ -18,6 +28,6 @@
         Apart from my personal work I also operate [AB+C](http://ab-c.com.au), alongside [Anthony Kolber](http://aestheticallyloyal.com). Together we are building [Ffolio](http://ffolio.net), a free portfolio service for artists and designers to gain beautiful, professional looking web representation.
     .colophon.note.two
       :markdown
-        Colophon: In part, you can read about [how this site came to be](/growing-up-with-a-new-site) within my opening post.
+        Colophon: In part, you can read about [how this site came to be](/articles/growing-up-with-a-new-site) within my opening post.
     
     
