--- a/views/_about.haml
+++ b/views/_about.haml
@@ -10,4 +10,6 @@
     These interests overflow into his programming and development work that he has conducted over the past 9 years.
     %span.source
       contact via 
-      %a{:href => entity_encode("mailto:ben.schwarz@gmail.com")} email
+      %a{:href => entity_encode("mailto:ben.schwarz@gmail.com"), :title => "Send an email to the author of this site"} email
+      or
+      %a{:href => "/about", :title => "Read more about the author of this site"} read more
