Updated README for licensing information

--- a/articles/growing-up-with-a-new-site.haml
+++ b/articles/growing-up-with-a-new-site.haml
@@ -27,3 +27,6 @@
   
   ## In closing
   A web site is never "done", I hope to evolve this site and keep it as fresh as I can for as long as I can (using technology, of course). Perhaps I'll end up writing better... God, I failed english in high school because I preferred to skip it to eat chinese and play pool with my friends. If it doesn't kill me it'll only make me stronger, right?
+
+.column.one.note
+  markdown: The source to the site is open and available [on Github](http://github.com/benschwarz/benschwarz-site). Just don't steal my content or design too.
