--- a/articles/growing-up-with-a-new-site.haml
+++ b/articles/growing-up-with-a-new-site.haml
@@ -1,32 +1,34 @@
 -# title: Growing up with a new site
 -# published: 2009-07-31
 
-:markdown
-  Looking back, my representation on the web has always been pretty half assed. In January, [Tim Lucas](http://toolmantim.com) pulled together a shiny new site and boosted his article quality dramatically. I thought "he's doing it right", I really wanted to get my action together.
-  ## Shiny object syndrome
-  That was January, here I sit the day before August staring into textmate typing the first article I've written in almost 2 years, I haven't even bothered to move those old posts. It wasn't worth it.
+.column.eight
+  :markdown
+    Looking back, my representation on the web has always been pretty half assed. In January, [Tim Lucas](http://toolmantim.com) pulled together a shiny new site and boosted his article quality dramatically. I thought "he's doing it right", I really wanted to get my action together.
+    ## Shiny object syndrome
+    That was January, here I sit the day before August staring into textmate typing the first article I've written in almost 2 years, I haven't even bothered to move those old posts. It wasn't worth it.
   
-  This year I've made more open source releases and contributions than ever before, I've lapped up various technologies and concepts, wrote my first DSL with ruby and felt like I was pushing through to another level, mentally anyway. 
+    This year I've made more open source releases and contributions than ever before, I've lapped up various technologies and concepts, wrote my first DSL with ruby and felt like I was pushing through to another level, mentally anyway. 
   
-  Its not hard to say that leaving my salary paying job and moving to consulting was one of the best things I've done. It felt selfish to leave the team for a reason none other than _"I needed time away"_. That was a year ago. Since then I've had more time to reflect on life and importantly, development.
+    Its not hard to say that leaving my salary paying job and moving to consulting was one of the best things I've done. It felt selfish to leave the team for a reason none other than _"I needed time away"_. That was a year ago. Since then I've had more time to reflect on life and importantly, development.
   
-  ## Juicy details
-  You might notice that the new site has a bunch of links to various web services. I'm pulling my "about the author" image from twitter, "upcoming events" from upcoming, "projects" from github, "presentations" from slideshare, "links" from delicious and recent images from flickr - all using [Smoke](http://github.com/benschwarz/smoke), not only that, but I do so using only [about 45 lines of source code](http://github.com/benschwarz/benschwarz-site/blob/6dd0fd6523e350be24b90d010e4d1f6f82cad60e/lib/stream.rb). 
+    ## Juicy details
+    You might notice that the new site has a bunch of links to various web services. I'm pulling my "about the author" image from twitter, "upcoming events" from upcoming, "projects" from github, "presentations" from slideshare, "links" from delicious and recent images from flickr - all using [Smoke](http://github.com/benschwarz/smoke), not only that, but I do so using only [about 45 lines of source code](http://github.com/benschwarz/benschwarz-site/blob/6dd0fd6523e350be24b90d010e4d1f6f82cad60e/lib/stream.rb). 
   
-  Inspired by [Yahoo's "Pipes"](http://pipes.yahoo.com) but frustrated with the strange act of dragging elements around the screen and knowing what I wanted to but finding that I could probably write a custom parser _faster_. A vast majority of the research or 'learning' projects that I've put together consume web services, now I can pull services together, mash them up, cut them to pieces and re-interpret the web the way I feel it should be.
+    Inspired by [Yahoo's "Pipes"](http://pipes.yahoo.com) but frustrated with the strange act of dragging elements around the screen and knowing what I wanted to but finding that I could probably write a custom parser _faster_. A vast majority of the research or 'learning' projects that I've put together consume web services, now I can pull services together, mash them up, cut them to pieces and re-interpret the web the way I feel it should be.
   
-  The article facet of this site is pinched straight from [Tim Lucas' site](http://github.com/toolmantim/toolmantim/), I dropped it in, it worked, [I drank beer](https://twitter.com/benschwarz/statuses/2934620984).
+    The article facet of this site is pinched straight from [Tim Lucas' site](http://github.com/toolmantim/toolmantim/), I dropped it in, it worked, [I drank beer](https://twitter.com/benschwarz/statuses/2934620984).
 
-  I typed a series of commands (maybe, 5?) and my site was running on [Heroku](http://heroku.com). Job done. I'll probably leave the beer alone tonight though. What an awesome experience that was, I'm a fan of [doing it yourself](http://github.com/benschwarz/passenger-stack), but this quick win felt so good.
+    I typed a series of commands (maybe, 5?) and my site was running on [Heroku](http://heroku.com). Job done. I'll probably leave the beer alone tonight though. What an awesome experience that was, I'm a fan of [doing it yourself](http://github.com/benschwarz/passenger-stack), but this quick win felt so good.
 
-  For now, I'm going to run without comments, if you've got something to stay ensure that you [drop me a line](/about), I'd love to hear about it.
+    For now, I'm going to run without comments, if you've got something to stay ensure that you [drop me a line](/about), I'd love to hear about it.
   
-  I'm using HTML5, so if you're in IE, well, you've probably given up by now. I don't care. Even though my personal web site is as much of personal development as it is my web representation, I still don't care. I get to use new elements and its fantastic. When I work on your jobs (hire me!) I won't be such a renegade.
+    I'm using HTML5, so if you're in IE, well, you've probably given up by now. I don't care. Even though my personal web site is as much of personal development as it is my web representation, I still don't care. I get to use new elements and its fantastic. When I work on your jobs (hire me!) I won't be such a renegade.
   
-  I'm responsible for the design of the site. [Anthony](http://aestheticallyloyal.com) gave me moral support, slapped some layout tips and rules on me when I asked for them. I think he found it really hard to watch me go through the process of putting the site together. Generally, when [we](http://ab-c.com.au) [work together](http://ffolio.net) he is the design part of our [voltron](http://images.google.com.au/images?q=voltron&oe=utf-8&rls=org.mozilla:en-US:official&client=firefox-a&um=1&ie=UTF-8&ei=iNRySvjDGoPuswOg8NzQCA&sa=X&oi=image_result_group&ct=title&resnum=4) machine. 
+    I'm responsible for the design of the site. [Anthony](http://aestheticallyloyal.com) gave me moral support, slapped some layout tips and rules on me when I asked for them. I think he found it really hard to watch me go through the process of putting the site together. Generally, when [we](http://ab-c.com.au) [work together](http://ffolio.net) he is the design part of our [voltron](http://images.google.com.au/images?q=voltron&oe=utf-8&rls=org.mozilla:en-US:official&client=firefox-a&um=1&ie=UTF-8&ei=iNRySvjDGoPuswOg8NzQCA&sa=X&oi=image_result_group&ct=title&resnum=4) machine. 
   
-  ## In closing
-  A web site is never "done", I hope to evolve this site and keep it as fresh as I can for as long as I can (using technology, of course). Perhaps I'll end up writing better... God, I failed english in high school because I preferred to skip it to eat chinese and play pool with my friends. If it doesn't kill me it'll only make me stronger, right?
+    ## In closing
+    A web site is never "done", I hope to evolve this site and keep it as fresh as I can for as long as I can (using technology, of course). Perhaps I'll end up writing better... God, I failed english in high school because I preferred to skip it to eat chinese and play pool with my friends. If it doesn't kill me it'll only make me stronger, right?
 
 .column.one.note
-  markdown: The source to the site is open and available [on Github](http://github.com/benschwarz/benschwarz-site). Just don't steal my content or design too.
+  :markdown
+    The source to the site is open and available [on Github](http://github.com/benschwarz/benschwarz-site).
