Pulled the link that I don't really have (yet)

--- a/views/_articles.haml
+++ b/views/_articles.haml
@@ -1,6 +1,6 @@
 - for article in articles
   %li.post
     %a{:href => article_path(article)}= article.title
-    %span.source
-      from
-      %a{:href => "/articles"} articles
+    / %span.source
+    /       from
+    /       %a{:href => "/articles"} articles
