--- a/views/layout.haml
+++ b/views/layout.haml
@@ -23,3 +23,8 @@
         = partial "event", :event => @event
         = partial "elsewhere"
         = partial "cc"
+    %script{ :src => "http://www.google-analytics.com/urchin.js", :type => "text/javascript" }
+    %script{ :type => "text/javascript" }
+      _uacct = "UA-139707-2";
+      urchinTracker();
+
