--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,18 +1,22 @@
 !!!
 %html{:lang => "en"}
   %head
-    %title Ben Schwarz
-    %link{:rel => "stylesheet", :href => "/css/reset.css", :type => "text/css", :media => "screen"}
-    %link{:rel => "stylesheet", :href => "/css/base.css", :type => "text/css", :media => "screen"}
-    %link{:rel => "openid.server", :href => "http://www.myopenid.com/server"}
-    %link{:rel => "openid.delegate", :href => "http://benschwarz.myopenid.com/"}
-    %link{:rel => "alternate", :title => "German for black RSS", :href => "http://feeds.feedburner.com/schwarz", :type => "application/atom+xml"}    
     %meta{"http-equiv" => 'Content-Type', :content => 'text/html; charset=utf-8'}
     %meta{:name => "description", :content => "A Melbourne based developer with an uncanny fetish for user experience and technology"}
     %meta{:name => "keywords", :content => "ruby, developer, ui, ux, user experience, application development, testing, test driven, development, melbourne, australia, ben, ben schwarz, benschwarz, bschwarz"}
     %meta{:name => "author", :content => "Ben Schwarz"}
     %meta{:name => "robots", :content => "index, follow"}
     %meta{:name => "verify-v1", :content => "BlTJbJUo6znmPTKrfDI07Fho8QvSw7Q/4NxpM0s4HwU="}    
+
+    /[if IE]
+      %script{:src => " http://html5shiv.googlecode.com/svn/trunk/html5.js"}
+
+    %title Ben Schwarz
+    %link{:rel => "stylesheet", :href => "/css/reset.css", :type => "text/css", :media => "screen"}
+    %link{:rel => "stylesheet", :href => "/css/base.css", :type => "text/css", :media => "screen"}
+    %link{:rel => "openid.server", :href => "http://www.myopenid.com/server"}
+    %link{:rel => "openid.delegate", :href => "http://benschwarz.myopenid.com/"}
+    %link{:rel => "alternate", :title => "German for black RSS", :href => "http://feeds.feedburner.com/schwarz", :type => "application/atom+xml"}    
     
   %body{:id => @page_id}
     #wrapper
