Corrected a typo (Thanks Pommy!)

--- a/articles/rubykaigi-a-western-perspective.haml
+++ b/articles/rubykaigi-a-western-perspective.haml
@@ -5,7 +5,7 @@
   :markdown
     I booked everything only 3 days before. Rushed around to shutdown the office for a couple of weeks and get everything in order. I woke up the day I was to depart feeling like I was getting a cold. I avoided packing until an hour and a half before I left for the airport.
 
-    As the plane descended into Nartia I felt a throbbing pain in my ear that felt like the side of my head was going to explode like an ACME bomb on a roadrunner cartoon.
+    As the plane descended into Narita I felt a throbbing pain in my ear that felt like the side of my head was going to explode like an ACME bomb on a roadrunner cartoon.
 
     That lasted for at least two days, I had managed to take a full jar of echinaccia by the third 
     day.  Appropriately, I shook the bug before it settled in – Anyway, this was the most disorientating feeling I’ve ever had. I was partially deaf, that is; I had to turn my head to my right ear to understand conversation with (english speaking) people. 
