Tweaking column widths

--- a/views/about.haml
+++ b/views/about.haml
@@ -4,7 +4,7 @@
   %h1 About the author
 
 %section#content
-  .column.seven
+  .column.eight
     :markdown
       ## Personal
       ![Me](/images/me.png)
@@ -21,7 +21,7 @@
 
       If you have a project in mind please feel free to drop me a line to discuss. If I can't help you chances are I'll know someone who can.
   
-  .column.four
+  .column.three
     #special-projects
       :markdown
         ## Special projects
