Single image, not multiple

--- a/views/index.haml
+++ b/views/index.haml
@@ -8,7 +8,7 @@
     %h2 Recently
     %ul
       = partial "articles", :articles => @articles
-      = partial "images", :images => @images
+      = partial "images", :image => @image
   
   = partial "links", :links => @links
   = partial "projects", :projects => @projects
